--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "stripe": "^17.3.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
