Added Orders actions and email order history

--- a/.env
+++ b/.env
@@ -18,11 +18,12 @@ STRIPE_WEBHOOK_SECRET=whsec_5b070314cf427e1c2d4eeeb466b0756501eb7083d4f62a821608
 RESEND_API_KEY=re_2MCHRZZr_FX9buYxUWjXk5Yk2x4pVRxjE
 SENDER_EMAIL=myshoesshop@gmail.com
 
-NEXT_PUBLIC_SERVER_URL=http://localhost:3000
 # Tecnologias:
 # Nextjs, Prisma.io, Tailwind, Shadcn,
 # npm i zod
 # npm i strapie y el resto
 # usar resend email: npm i resend react-email
 # account id=acct_1QFNlaKQWh7yQVX5
-# 3:18:48
+# 3:26:11
+
+# Mostrar imagen en plantilla react-email
